# AdventOfCode2025

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cxx  precompiled.hxx
Solutions/: CMakeLists.txt  Day.cxx  Day.hxx  Day0.cxx  Day0.hxx  Day1.cxx  Day1.hxx  Day2.cxx  Day2.hxx  Day3.cxx  Day3.hxx  Day4.cxx  Day4.hxx  Day5.cxx  Day5.hxx  Day6.cxx  Day6.hxx  Day7.cxx  Day7.hxx  Day8.cxx  Day8.hxx  Day9.cxx  Day9.hxx  precompiled.hxx
Utilities/: CMakeLists.txt  Direction.cxx  Direction.hxx  Parser.cxx  Parser.hxx  Position.cxx  Position.hxx  PositionAndDirection.cxx  PositionAndDirection.hxx  precompiled.hxx
